package smarthome.domain.actuators;

public interface ActuatorSpecificInteger
{
    boolean setActuatorSpecificValue(int specificInteger);
}
